outsource the XML API base URL with configuration value (@Value(

--- a/pom.xml
+++ b/pom.xml
@@ -82,15 +82,20 @@
 		</dependency>
 		<!-- JAXB Dependencies END -->
 
+		<!-- Test Dependencies Start -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
 		<dependency>
-			<groupId>jakarta.xml.bind</groupId>
-			<artifactId>jakarta.xml.bind-api</artifactId>
+			<groupId>org.wiremock</groupId>
+			<artifactId>wiremock</artifactId>
+			<version>3.6.0</version>
+			<scope>test</scope>
 		</dependency>
+
 	</dependencies>
 
 	<build>
